--- a/src/main/java/com/example/one/java02front/HTMLDOM/isEmptyUname.html
+++ b/src/main/java/com/example/one/java02front/HTMLDOM/isEmptyUname.html
@@ -19,7 +19,7 @@
     </script>
 </head>
 <body>
-<form  action="xialaMenu.html" method="post" onsubmit="return login()">
+<form action="下拉菜单.html" method="post" onsubmit="return login()">
     <span>账号：<input type="text" id="uname"></span><br>
     <span>密码：<input type="password" id="upsd"></span><br>
     <button type="submit">登录</button>
