add java02(前端部分) AJAX

--- a/src/main/java/com/example/one/java02front/HTMLDOM/表格排序.html
+++ b/src/main/java/com/example/one/java02front/HTMLDOM/表格排序.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>表格排序</title>
+    <!--    点击表头，实现排序效果-->
     <style>
         table{
             width:80%;
